--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
               <div class="card2">
                 <h4 class="card-heading">Sunrise & Sunset</h4>
                 <div class="content">
-                  <p class="sun-rise">0</p>
-                  <p class="sun-set">0</p>
+                  <p class="sun-rise" id="sun-rise">0</p>
+                  <p class="sun-set" id = "sun-set">0</p>
                 </div>
               </div>
               <div class="card2">
